@@ -6,6 +6,7 @@ Testing
 * 40-49: RIS
 * 50-59: DECSEL, DECSED
 * 70-79: HT, HTS, CHT, CBT, TBC
+* 80-99: modes
 * 100+: DCS, SOS, OSC, PM, APC
 * 200+: SGR
 
@@ -15,7 +16,8 @@ Testing
 Commands To Implement
 =====================
 
-* Modes: SM, RM
+* Modes: IRM, LNM, DECCOLM, DECSCNM, DECOM, DECAWM, reverse wraparound,
+    alternate screen buffer
 * Reset: DECSTR
 * Cursor save/restore: DECSC, DECRC, CSI s, CSI u
 * Scroll region: DECSTBM, modify scroll()
