@@ -1,4 +1,5 @@
 Version 0.3 - ????-??-??
+- Add support for modes.
 
 Version 0.2.1 - 2010-08-14
 - Fix a major bug that causes 0.2 to not work at all.
